added the put and delete method for swagger
